fix spacing in tiles

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ a:hover{
 }
 
 .routes{
-  padding: 20px;
+  padding: 20px 60px 40px 60px;
   background-color: var(--light-gray);
 }
 
